--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,21 @@ nosetests.xml
 .mr.developer.cfg
 .project
 .pydevproject
+
+# Object files
+*.o
+
+# Libraries
+*.lib
+*.a
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
